--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
                 <hr>
                 {% if request.user.is_authenticated %}
                     <a class="nav-link" href="{% url 'account_logout' %}"><i class="fa-solid fa-user" style="color: #30362F;"></i></a>
-                    <a class="nav-link" href="#"><i class="fa-solid fa-plus" style="color: #30362F;"></i></a>
+                    <a class="nav-link" href="{% url 'add_post' %}"><i class="fa-solid fa-plus" style="color: #30362F;"></i></a>
                 {% else %}
                     <a class="nav-link" href="{% url 'account_login' %}"><i class="fa-solid fa-user" style="color: #30362F;"></i></a>
                 {% endif %}
