--- a/static/css/base.css
+++ b/static/css/base.css
@@ -205,32 +205,6 @@ body {
 }
 
 /* Add post page */
-.add-post-header {
-    background-color: #E4E0CF;
-    padding: 20px;
-    border-radius: 15px;
-    border: 3px solid #30362F;
-    width: 100%;
-}
-
-.add-post {
-    background-color: #96BDC6;
-    padding: 20px;
-    border-radius: 15px;
-    display: flex;
-    justify-content: space-between;
-    transition: all 0.3s ease-in-out;
-}
-
-.form-container {
-    background-color: #E4E0CF;
-    padding: 10px;
-    border-radius: 15px;
-    border: 3px solid #30362F;
-    width: 100%;
-    transition: width 0.3s ease-in-out;
-}
-
 .post-preview {
     background-color: #E4E0CF;
     padding: 10px;
@@ -259,4 +233,32 @@ body {
 
 #preview-post-button {
     margin-left: 8px;
+}
+/* Form styles */
+.add-post-header,
+.create-profile-header {
+    background-color: #E4E0CF;
+    padding: 20px;
+    border-radius: 15px;
+    border: 3px solid #30362F;
+    width: 100%;
+}
+
+.add-post,
+.create-profile {
+    background-color: #96BDC6;
+    padding: 20px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: space-between;
+    transition: all 0.3s ease-in-out;
+}
+
+.form-container {
+    background-color: #E4E0CF;
+    padding: 10px;
+    border-radius: 15px;
+    border: 3px solid #30362F;
+    width: 100%;
+    transition: width 0.3s ease-in-out;
 }
