Created profile page to display an individual users profile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -12,6 +12,10 @@ body {
     background-attachment: fixed;
 }
 
+hr {
+    border-top: 2px dashed #30362F !important;
+}
+
 /* Sidebar Layout */
 .sidebar {
     width: 200px;
@@ -93,8 +97,74 @@ body {
     border: 0.5px solid #30362F
 }
 
-/* Posts */
+/* Profile Page */
+.profile-header,
+.profile-body {
+    margin: 0 auto;
+    background-color: #96BDC6;
+    padding: 20px;
+    border-radius: 15px;
+    border: 3px solid #30362F;
+    width: 80%; 
+}
 
+.profile-body {
+    margin-top: 25px;
+}
+
+.profile-header-container,
+.profile-body-container {
+    align-items: center;
+    background-color: #E4E0CF;
+    padding: 10px;
+    border-radius: 15px;
+    border: 3px solid #30362F;
+    width: 100%;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+}
+
+.profile-image {
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 2.5px solid #30362F;
+    margin-left: 70px;
+}
+
+.profile-body-container hr {
+    margin: 0 auto;
+}
+
+.dropdown-menu {
+    background-color: #96BDC6 !important;
+    border: 2px solid #30362F !important;
+    margin-left: 48px !important;
+    padding: 10px !important;
+}
+
+.dropdown-menu-container {
+    background-color: #E4E0CF;
+    padding: 10px;
+    border-radius: 5%;
+    border: 2px solid #30362F;
+
+}
+
+.dropdown-menu-container hr {
+    margin: 0 auto;
+}
+
+.dropdown-item {
+    font-weight: 500 !important;
+}
+
+.dropdown-item:hover {
+    background-color: #E4E0CF !important;
+}
+
+/* Posts */
 .feed {
     display: flex;
     flex-direction: column;
@@ -134,12 +204,12 @@ body {
 .card-body-container {
     display: flex;
     flex-direction: column;
-    justify-content: center; /* Ensure content inside is centered */
+    justify-content: center !important; /* Ensure content inside is centered */
     height: 100%;
     background-color: #E4E0CF !important;
     border-radius: 15px;
     border: 3px solid #30362F;
-    margin: 5px;
+    margin: 5px !important;
 }
 
 .img-container img {
@@ -234,6 +304,7 @@ body {
 #preview-post-button {
     margin-left: 8px;
 }
+
 /* Form styles */
 .add-post-header,
 .create-profile-header {
