--- a/home/templates/home/add_post.html
+++ b/home/templates/home/add_post.html
@@ -29,9 +29,8 @@
                     <div class="col-md-8">
                         <div class="card-body-container">
                             <div class="card-body">
-                                <h4 class="card-title" id="preview-author">{{ request.user.username }}</h4> <!-- Use logged-in user -->
+                                <h4 class="card-title"><img src="{{ profile_image.url }}" alt="Profile Image"> {{ request.user.username }}</h4>
                                 <hr>
-                                <p class="card-text"><strong>{{ request.user.username }}</strong>:</p>
                                 <p class="post-caption" id="preview-caption">Your post caption will appear here...</p>
                                 <p class="card-text"><small class="text-body-secondary">Just now</small></p>
                                 <hr>
