--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,17 +14,18 @@
                     <div class="col-md-8">
                         <div class="card-body-container">
                             <div class="card-body">
-                            <h4 class="card-title">{{ post.author }}</h4>
+                            <h4 class="card-title"><img src="{{ post.author.userprofile.profile_image.url }}" alt="Profile Image"> {{ post.author }}</h4>
                             <hr>
-                            <p class="card-text"><strong>{{ post.author }}</strong>:</p>
                             <p class="post-caption" id="caption-{{ post.id }}">{{ post.post_caption }}</p>
                             <a href="javascript:viod(0)" class="read-more" id="read-more-{{ post.id }}" style="display: none;" onclick="toggleCaption('{{ post.id }}')">Read More</a>
                             <p class="card-text"><small class="text-body-secondary">Posted ~ {{ post.created_on }}</small></p>
-                            <hr>
-                            <div class="mb-1">
-                                <button class="like-button"><i class="fa-regular fa-heart"></i></button>
-                                <a class="comment-button" href=""><i class="fa-regular fa-comment"></i></a>
-                                <a class="share-button" href=""><i class="fa-regular fa-share-from-square"></i></a>
+                            <div class="post-footer">
+                                <hr>
+                                <div class="action-buttons">
+                                    <button class="like-button"><i class="fa-regular fa-heart"></i></button>
+                                    <a class="comment-button" href=""><i class="fa-regular fa-comment"></i></a>
+                                    <a class="share-button" href=""><i class="fa-regular fa-share-from-square"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
