--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -16,6 +16,10 @@
                             <li><a class="dropdown-item" href="{% url 'account_logout' %}">Sign Out</a></li>
                             <hr style="width: 50%;">
                             <li><a class="dropdown-item" href="#">Edit Profile</a></li>
+                            {% if request.user.is_superuser %}
+                            <hr style="width: 50%;">
+                            <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin Panel</a></li>
+                            {% endif %}
                         </div>
                     </ul>
                 </div>
@@ -34,17 +38,33 @@
                     <div id="posts" class="card col-6 mb-3" style="margin:20px auto;">
                         <div class="row g-0">
                             <div class="col-md-4">
-                                <div class="img-container">
+                                <div class="img-container" style="position: relative;">
                                     <img src="{{ post.post_image.url }}" class="post-image img-fluid" alt="Post Image">
+
+                                    {% if post.status == 0 %}
+                                        <div class="draft-overlay">
+                                            <span class="draft-text">Draft</span>
+                                        </div>
+                                    {% endif %}
                                 </div>
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body-container">
                                     <div class="card-body">
-                                    <h4 class="card-title">{{ post.author }}</h4>
-                                    <a href="{% url 'delete_post' post.id%}"><i class="fa-solid fa-ellipsis"></i></a>
+                                    <div class="dropend">
+                                        <a class="float-end" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            <i class="fa-xl fa-solid fa-ellipsis" style="color: #30362F;"></i>
+                                        </a>
+                                        <ul class="dropdown-menu text-center">
+                                            <div class="dropdown-menu-container">
+                                                <li><a class="dropdown-item" href="{% url 'edit_status' post.id %}">Post Status</a></li>
+                                                <hr style="width: 50%;">
+                                                <li><a class="dropdown-item" href="{% url 'delete_post' post.id %}" style="color: red;">Delete Post</a></li>
+                                            </div>
+                                        </ul>
+                                    </div>
+                                    <h4 class="card-title"><img src="{{ post.author.userprofile.profile_image.url }}" alt="Profile Image"> {{ post.author }}</h4>
                                     <hr>
-                                    <p class="card-text mt-3"><strong>{{ post.author }}</strong>:</p>
                                     <p class="post-caption" id="caption-{{ post.id }}">{{ post.post_caption }}</p>
                                     <a href="javascript:viod(0)" class="read-more" id="read-more-{{ post.id }}" style="display: none;" onclick="toggleCaption('{{ post.id }}')">Read More</a>
                                     <p class="card-text"><small class="text-body-secondary">Posted ~ {{ post.created_on }}</small></p>
