--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -42,6 +42,7 @@
                     {% csrf_token %}
                     <textarea name="comment_body"
                         class="form-control comment-textarea">{{ form.comment|crispy }}</textarea>
+                    <input type="hidden" name="next" value="{{ request.path }}">
                     <button id="form-button" type="submit"
                         class="btn btn-sm rounded-4 ms-2 mb-2">Comment</button>
                 </form>
