--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -1,136 +1,179 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-    <div class="profile-header">
-        <div class="profile-header-container row">
-            <div class="col-4">
-                <img src="{{ profile.profile_image.url }}" class="profile-image" alt="Profile image">
+<div class="profile-header">
+    <div class="profile-header-container row">
+        <div class="col-4">
+            <img src="{{ profile.profile_image.url }}" class="profile-image" alt="Profile image">
+        </div>
+        <div class="col-8">
+            <div class="dropend">
+                <a class="float-end" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="fa-xl fa-solid fa-gear" style="color: #30362F;"></i>
+                </a>
+                <ul class="dropdown-menu text-center">
+                    <div class="dropdown-menu-container">
+                        <li><a class="dropdown-item" href="{% url 'account_logout' %}">Sign Out</a></li>
+                        <hr style="width: 50%;">
+                        <li><a class="dropdown-item" href="#">Edit Profile</a></li>
+                        {% if request.user.is_superuser %}
+                        <hr style="width: 50%;">
+                        <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin Panel</a></li>
+                        {% endif %}
+                    </div>
+                </ul>
             </div>
-            <div class="col-8">
-                <div class="dropend">
-                    <a class="float-end" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fa-xl fa-solid fa-gear" style="color: #30362F;"></i>
-                    </a>
-                    <ul class="dropdown-menu text-center">
-                        <div class="dropdown-menu-container">
-                            <li><a class="dropdown-item" href="{% url 'account_logout' %}">Sign Out</a></li>
-                            <hr style="width: 50%;">
-                            <li><a class="dropdown-item" href="#">Edit Profile</a></li>
-                            {% if request.user.is_superuser %}
-                            <hr style="width: 50%;">
-                            <li><a class="dropdown-item" href="{% url 'admin:index' %}">Admin Panel</a></li>
-                            {% endif %}
-                        </div>
-                    </ul>
-                </div>
-                <h1 class="pt-3">{{ profile.user.username }}</h1>
-                <hr>
-                <p>{{ profile.profile_bio }}</p>
-            </div>
+            <h1 class="pt-3">{{ profile.user.username }}</h1>
+            <hr>
+            <p>{{ profile.profile_bio }}</p>
         </div>
     </div>
-    <div class="profile-body">
-        <div class="profile-body-container">
-            <h2 class="text-center">Posts</h2>
-            <hr style="width: 80%;">
-            {% for post in posts %}
-                {% if post.author == profile.user %}
-                    <div id="posts" class="card col-6 mb-3" style="margin:20px auto;">
-                        <div class="row g-0">
-                            <div class="col-md-4">
-                                <div class="img-container" style="position: relative;">
-                                    <img src="{{ post.post_image.url }}" class="post-image img-fluid" alt="Post Image">
+</div>
+<div class="profile-body">
+    <div class="profile-body-container">
+        <h2 class="text-center">Posts</h2>
+        <hr style="width: 80%;">
+        {% for post in posts %}
+        {% if post.author == profile.user %}
+        <div id="posts" class="card col-6 mb-3" style="margin:20px auto;">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <div class="img-container" style="position: relative;">
+                        <img src="{{ post.post_image.url }}" class="post-image img-fluid" alt="Post Image">
 
-                                    {% if post.status == 0 %}
-                                        <div class="draft-overlay">
-                                            <span class="draft-text">Draft</span>
-                                        </div>
-                                    {% endif %}
-                                </div>
-                            </div>
-                            <div class="col-md-8">
-                                <div class="card-body-container">
-                                    <div class="card-body">
-                                    <div class="dropend">
-                                        <a class="float-end" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                            <i class="fa-xl fa-solid fa-ellipsis" style="color: #30362F;"></i>
-                                        </a>
-                                        <ul class="dropdown-menu text-center">
-                                            <div class="dropdown-menu-container">
-                                                <li><a class="dropdown-item" href="{% url 'edit_status' post.id %}">Post Status</a></li>
-                                                <hr style="width: 50%;">
-                                                <li><a class="dropdown-item" href="{% url 'delete_post' post.id %}" style="color: red;">Delete Post</a></li>
-                                            </div>
-                                        </ul>
+                        {% if post.status == 0 %}
+                        <div class="draft-overlay">
+                            <span class="draft-text">Draft</span>
+                        </div>
+                        {% endif %}
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body-container">
+                        <div class="card-body">
+                            <div class="dropend">
+                                <a class="float-end" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    <i class="fa-xl fa-solid fa-ellipsis" style="color: #30362F;"></i>
+                                </a>
+                                <ul class="dropdown-menu text-center">
+                                    <div class="dropdown-menu-container">
+                                        <li><a class="dropdown-item" href="{% url 'edit_status' post.id %}">Post
+                                                Status</a></li>
+                                        <hr style="width: 50%;">
+                                        <li><a class="dropdown-item" href="{% url 'delete_post' post.id %}"
+                                                style="color: red;">Delete Post</a></li>
                                     </div>
-                                    <h4 class="card-title"><img src="{{ post.author.userprofile.profile_image.url }}" alt="Profile Image"> {{ post.author }}</h4>
-                                    <hr>
-                                    <p class="post-caption" id="caption-{{ post.id }}">{{ post.post_caption }}</p>
-                                    <a href="javascript:viod(0)" class="read-more" id="read-more-{{ post.id }}" style="display: none;" onclick="toggleCaption('{{ post.id }}')">Read More</a>
-                                    <p class="card-text"><small class="text-body-secondary">Posted ~ {{ post.created_on }}</small></p>
-                                    <hr>
-                                    <div class="mb-1 mt-3">
-                                        <button class="like-button"><i class="fa-regular fa-heart"></i></button>
-                                        <a class="comment-button" href=""><i class="fa-regular fa-comment"></i></a>
-                                        <a class="share-button" href=""><i class="fa-regular fa-share-from-square"></i></a>
-                                    </div>
-                                </div>
+                                </ul>
                             </div>
+                            <h4 class="card-title"><img src="{{ post.author.userprofile.profile_image.url }}"
+                                    alt="Profile Image"> {{ post.author }}</h4>
+                            <hr>
+                            <p class="post-caption" id="caption-{{ post.id }}">{{ post.post_caption }}</p>
+                            <a href="javascript:viod(0)" class="read-more" id="read-more-{{ post.id }}"
+                                style="display: none;" onclick="toggleCaption('{{ post.id }}')">Read More</a>
+                            <p class="card-text"><small class="text-body-secondary">Posted ~
+                                    {{ post.created_on }}</small></p>
+                            <hr>
+                            <div class="mb-1 mt-3">
+                                <button class="like-button"><i class="fa-regular fa-heart"></i></button>
+                                <a class="comment-button" href="javascript:void(0);" onclick="toggleComments('{{ post.id }}')">
+                                    <i class="fa-regular fa-comment"></i>
+                                </a>
+                                <a class="share-button" href=""><i class="fa-regular fa-share-from-square"></i></a>
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+            <!-- Initially hidden commnet form -->
+            <div class="comments" id="comments-{{ post.id }}" style="display: none; margin-top: 10px;">
+                <form method="post" action="{% url 'add_comment' post.id %}">
+                    {% csrf_token %}
+                    <textarea name="comment_body"
+                        class="form-control comment-textarea">{{ form.comment|crispy }}</textarea>
+                    <input type="hidden" name="next" value="{{ request.path }}">
+                    <button id="form-button" type="submit"
+                        class="btn btn-sm rounded-4 ms-2 mb-2">Comment</button>
+                </form>
+                <hr>
+                {% if post.comments.all %}
+                    {% for comment in post.comments.all %}
+                        <div class="post-comment col-12 col-lg-8">
+                            <strong class="comment-title"><img src="{{ post.author.userprofile.profile_image.url }}"
+                                alt="Profile Image">{{ comment.comment_author.username }} | <small class="text-muted">{{ comment.created_on }}</small></strong>
+                            <hr>
+                            <p>{{ comment.comment_body }}</p>
+                        </div>
+                    {% endfor %}
                 {% else %}
-                    <h3>No Posts</h3>
+                    <p class="ms-2">No Comments yet.</p>
                 {% endif %}
-            {% endfor %}
+            </div>
         </div>
+        {% endif %}
+        {% endfor %}
     </div>
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            // Function to check and show the "Read More" link if needed
-            function checkCaptions() {
-                document.querySelectorAll('.post-caption').forEach(function(caption) {
-                    const lineHeight = parseInt(window.getComputedStyle(caption).lineHeight); // Get the line-height of the caption
-                    const maxTwoLineHeight = lineHeight * 2; // Calculate the maximum height for 2 lines
-    
-                    // If the actual height of the caption exceeds 2 lines, show the read-more link
-                    const postId = caption.id.split('-')[1]; // Extract the post ID from the caption element's id
-                    const readMoreLink = document.getElementById(`read-more-${postId}`);
-    
-                    if (caption.scrollHeight > maxTwoLineHeight) {
-                        readMoreLink.style.display = 'inline'; // Show the Read More link
-                    } else {
-                        readMoreLink.style.display = 'none'; // Hide the Read More link if it's not needed
-                    }
-                });
-            }
-    
-            // Initial check when the page loads
-            checkCaptions();
-    
-            // Recheck when the window is resized (throttled to avoid performance issues)
-            let resizeTimer;
-            window.addEventListener('resize', function() {
-                clearTimeout(resizeTimer);
-                resizeTimer = setTimeout(function() {
-                    checkCaptions();
-                }, 250); // Delay of 250ms to throttle the resize event
+</div>
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        // Function to check and show the "Read More" link if needed
+        function checkCaptions() {
+            document.querySelectorAll('.post-caption').forEach(function (caption) {
+                const lineHeight = parseInt(window.getComputedStyle(caption)
+                .lineHeight); // Get the line-height of the caption
+                const maxTwoLineHeight = lineHeight * 2; // Calculate the maximum height for 2 lines
+
+                // If the actual height of the caption exceeds 2 lines, show the read-more link
+                const postId = caption.id.split('-')[
+                1]; // Extract the post ID from the caption element's id
+                const readMoreLink = document.getElementById(`read-more-${postId}`);
+
+                if (caption.scrollHeight > maxTwoLineHeight) {
+                    readMoreLink.style.display = 'inline'; // Show the Read More link
+                } else {
+                    readMoreLink.style.display = 'none'; // Hide the Read More link if it's not needed
+                }
             });
-        });
-    
-        function toggleCaption(postId) {
-            // Get the post caption and the read-more link by ID
-            const caption = document.getElementById(`caption-${postId}`);
-            const readMoreLink = document.getElementById(`read-more-${postId}`);
-    
-            // Toggle the 'expanded' class to show or hide full caption
-            if (caption.classList.contains('expanded')) {
-                caption.classList.remove('expanded');
-                readMoreLink.innerHTML = "Read more"; // Switch to "Read more"
-            } else {
-                caption.classList.add('expanded');
-                readMoreLink.innerHTML = "Read less"; // Switch to "Read less"
-            }
         }
-    </script>
+
+        // Initial check when the page loads
+        checkCaptions();
+
+        // Recheck when the window is resized (throttled to avoid performance issues)
+        let resizeTimer;
+        window.addEventListener('resize', function () {
+            clearTimeout(resizeTimer);
+            resizeTimer = setTimeout(function () {
+                checkCaptions();
+            }, 250); // Delay of 250ms to throttle the resize event
+        });
+    });
+
+    function toggleCaption(postId) {
+        // Get the post caption and the read-more link by ID
+        const caption = document.getElementById(`caption-${postId}`);
+        const readMoreLink = document.getElementById(`read-more-${postId}`);
+
+        // Toggle the 'expanded' class to show or hide full caption
+        if (caption.classList.contains('expanded')) {
+            caption.classList.remove('expanded');
+            readMoreLink.innerHTML = "Read more"; // Switch to "Read more"
+        } else {
+            caption.classList.add('expanded');
+            readMoreLink.innerHTML = "Read less"; // Switch to "Read less"
+        }
+    }
+
+    // Toggle fucntion to show the comment section
+    function toggleComments(postId) {
+        const comments = document.getElementById(`comments-${postId}`);
+        if (comments.style.display === 'none' || !comments.style.display) {
+            comments.style.display = 'block';
+        } else {
+            comments.style.display = 'none';
+        }
+    }
+</script>
 {% endblock %}
