--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
             </a>
             <nav class="nav flex-column mt-4">
                 <a class="nav-link" href="{% url 'home' %}"><i class="fa-solid fa-house" style="color: #30362F;"></i></a>
-                <a class="nav-link" href="#"><i class="fa-solid fa-magnifying-glass" style="color: #30362F;"></i></a>
+                <a class="nav-link" href="{% url 'search_profiles' %}"><i class="fa-solid fa-magnifying-glass" style="color: #30362F;"></i></a>
                 <a class="nav-link" href="#"><i class="fa-solid fa-envelope" style="color: #30362F;"></i></a>
                 <a class="nav-link" href="#"><i class="fa-solid fa-store" style="color: #30362F;"></i></a>
             </nav>
