--- a/profiles/templates/profiles/search_profiles.html
+++ b/profiles/templates/profiles/search_profiles.html
@@ -1,23 +1,28 @@
 {% extends 'base.html' %}
-{% load static %}
+{% load crispy_forms_tags %}
 
 {% block content %}
     <div id="search-page"></div>
     <div class="search">
         <div class="search-container">
             <form method="get" action="{% url 'search_profiles' %}">
-                <input type="text" name="q" placeholder="Search users..." value="{{ query }}">
-                <button type="submit">Search</button>
+                {% csrf_token %}
+                {{ crispy }}
+                <div class="input-group mb-3">
+                    <input type="text" name="q" class="form-control" placeholder="Search users..." value="{{ query }}" aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Search</button>
+                </div>
             </form>
         
             <h2>Results</h2>
-            <ul>
+            <ul class="list-group">
                 {% for profile in profiles %}
-                    <li>
-                        <a href="{% url 'profile_detail' profile.user.username %}">
-                            {{ profile.user.username }} - {{ profile.user.first_name }} {{ profile.user.last_name }}
-                        </a>
-                    </li>
+                    <a class="search-results" href="{% url 'profile_detail' profile.user.username %}">
+                        <li class="list-group-item">
+                            <img src="{{ profile.profile_image.url }}" class="searchbar-profile-image" alt="Profile image">
+                            {{ profile.user.username }}
+                        </li>
+                    </a>
                 {% empty %}
                     <p>No users found matching your search.</p>
                 {% endfor %}
